Fixed Cash Raffle Prizes

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -53,7 +53,6 @@
     <div class="stripe white-stripe">
         <h2>Raffle Prizes</h2>
         <p>Don't forget to enter the 2019 Raffle, featuring many great prizes including:</p>
-
         <table>
             <tr>
                 <th>Donated By</th>
@@ -61,34 +60,14 @@
                 <th>Prize</th>
             </tr>
             <tr>
-                <td>Anonymous Donor</td>
+                <td><a href="#cash-donors">Cash Donors</a></td>
                 <td>1</td>
                 <td>$1000 Cash</td>
             </tr>
             <tr>
-                <td>Anonymous Donor</td>
+                <td><a href="#cash-donors">Cash Donors</a></td>
                 <td>1</td>
                 <td>$500 Cash</td>
-            </tr>
-            <tr>
-                <td><a href="http://donmeyerford.com/">Don Meyer Ford</a></td>
-                <td>1</td>
-                <td>$150 Cash</td>
-            </tr>
-            <tr>
-                <td><a href="https://www.infarmbureau.com/find-agent/agent-profile/detail/Ken-Ewing-A1645">Farm Bureau - Ken Ewing</a></td>
-                <td>1</td>
-                <td>$100 Cash</td>
-            </tr>
-            <tr>
-                <td><a href="https://www.facebook.com/HOPjimscheidler/">HOP Communications - Jim Scheidler and Mark Fry</a></td>
-                <td>1</td>
-                <td>$100 Cash</td>
-            </tr>
-            <tr>
-                <td><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John and Ladies Auxilary of Millhousen</a></td>
-                <td>1</td>
-                <td>$50 Cash</td>
             </tr>
             <tr>
                 <td>Norb Bedel</td>
@@ -172,6 +151,13 @@
             </tr>
         </table>
         <p>New items added daily!</p>
+        <p id="cash-donors">Cash prizes were made possible by the following generous donors:</p>
+        <ul>
+            <li><a href="http://donmeyerford.com/">Don Meyer Ford</a> - $150</li>
+            <li><a href="https://www.infarmbureau.com/find-agent/agent-profile/detail/Ken-Ewing-A1645">Ken Ewing of Farm Bureau</a> - $100</li>
+            <li><a href="https://www.facebook.com/HOPjimscheidler/">Jim Scheidler and Mark Fry of HOP Communications</a> - $100</li>
+            <li><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John and Ladies Auxilary of Millhousen</a> - $50</li>
+        </ul>
     </div>
     <div class="stripe gray-stripe">
         <h3>Full Consignment Request</h3>
