Raffle Prize List Update

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -95,19 +95,69 @@
                 <td>$50 Gas Card</td>
             </tr>
             <tr>
+                <td><a href="https://stierheating.com/">Stier Heating &amp; Cooling</a></td>
+                <td>1</td>
+                <td>$50 Gift Card</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/C-P-Tavern-1569845743243304/">C &amp; P Tavern, Napoleon</a></td>
+                <td>2</td>
+                <td>Whole Chicken Dinner Specials</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/C-P-Tavern-1569845743243304/">C &amp; P Tavern, Napoleon</a></td>
+                <td>1</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
+                <td>1</td>
+                <td>$30 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="http://www.mancinosgreensburg.com/index.html">Mancino's, Greensburg</a></td>
+                <td>2</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://ekova.com/kova-ag-team/kova-retail/map/">Kova of Westport</a></td>
+                <td>1</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.beckshybrids.com/">Jim Kunz and Kenny Tebbe - Beck's Seeds</a></td>
+                <td>1</td>
+                <td>Beck's Winter Coat</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/pages/Dairy-Queen/109384592434697">Dairy Queen, Westport</a></td>
+                <td>2</td>
+                <td>10" Decorated Cakes</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.facebook.com/LovesRRInn/">Love's Railroad Inn, Napoleon</a></td>
+                <td>1</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://www.baileysflowerswestport.com/">Bailey's Flowers, Westport</a></td>
+                <td>1</td>
+                <td>$25 Certificate</td>
+            </tr>
+            <tr>
                 <td><a href="http://oldenburgfranciscans.org/">Sisters of St. Francis, Oldenburg</a></td>
                 <td>1</td>
                 <td>Gift Basket</td>
             </tr>
             <tr>
                 <td><a href="http://wyaloosingcreek.weebly.com/">Wyaloosing Creek Golf Course</a></td>
-                <td>1</td>
-                <td>2 18-Hole Games with Cart</td>
+                <td>2</td>
+                <td>18-Hole Game with Cart</td>
             </tr>
             <tr>
-                <td><a href="http://walterstire.com/">Walter's Tire Service</a></td>
-                <td>4</td>
-                <td>4-Tire Rotation and Balancing Certificate</td>
+                <td><a href="https://www.facebook.com/RiehleFreshMeat/">Riehle Meat Market, Osgood</a></td>
+                <td>1</td>
+                <td>$10 Certificate</td>
             </tr>
             <tr>
                 <td><a href="https://www.greensburgsoy.com/">Greensburg Soy Processors</a></td>
@@ -117,7 +167,7 @@
             <tr>
                 <td><a href="http://www.stonesfarmservice.com/">Stone's Farm Service</a></td>
                 <td>1</td>
-                <td>Wash Bucket and Lights</td>
+                <td>Wash Bucket</td>
             </tr>
             <tr>
                 <td><a href="https://www.facebook.com/parksidelanesbowling/">Parkside Lanes</a></td>
@@ -125,24 +175,14 @@
                 <td>Bowling and Miniture Golf</td>
             </tr>
             <tr>
-                <td><a href="https://www.beckshybrids.com/">Jim Kunz and Kenny Tebbe - Beck's Seeds</a></td>
+                <td>Wenning Family of Millhousen</td>
                 <td>1</td>
-                <td>Beck's Winter Coat</td>
+                <td>Wooden Step Stool, Handcrafted by Everett Wenning</td>
             </tr>
             <tr>
-                <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
-                <td>1</td>
-                <td>$30 Certificate</td>
-            </tr>
-            <tr>
-                <td><a href="https://ekova.com/kova-ag-team/kova-retail/map/">Kova of Westport</a></td>
-                <td>1</td>
-                <td>$25 Certificate</td>
-            </tr>
-            <tr>
-                <td><a href="https://www.facebook.com/RiehleFreshMeat/">Riehle Meat Market, Osgood</a></td>
-                <td>1</td>
-                <td>$10 Certificate</td>
+                <td><a href="http://walterstire.com/">Walter's Tire Service - Goodyear</a></td>
+                <td>4</td>
+                <td>4-Tire Rotation and Balancing Certificate</td>
             </tr>
             <tr>
                 <td><a href="https://etczone.com/">Enhanced Telecommunications</a></td>
@@ -153,10 +193,17 @@
         <p>New items added daily!</p>
         <p id="cash-donors">Cash prizes were made possible by the following generous donors:</p>
         <ul>
+            <li><a href="http://www.hm-tool.com/">H&amp;M Tool and Die</a> - $500</li>
+            <li>Norb and LaDonna Hoeing - $500</li>
+            <li><a href="https://hilliard.com/wealth-advisors/IN/greensburg#1176">Hilliard Lyons</a> - $300</li>
+            <li><a href="https://johannigmanexcavating.com">Johannigman Excavating</a> - $200</li>
             <li><a href="http://donmeyerford.com/">Don Meyer Ford</a> - $150</li>
             <li><a href="https://www.infarmbureau.com/find-agent/agent-profile/detail/Ken-Ewing-A1645">Ken Ewing of Farm Bureau</a> - $100</li>
-            <li><a href="https://www.facebook.com/HOPjimscheidler/">Jim Scheidler and Mark Fry of HOP Communications</a> - $100</li>
-            <li><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John and Ladies Auxilary of Millhousen</a> - $50</li>
+            <li><a href="https://www.facebook.com/HOPjimscheidler/">HOP Communications</a> - $100</li>
+            <li><a href="https://www.facebook.com/pages/K-Fab/154338271268386">K-Fab</a> - $100</li>
+            <li><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Knights of St. John of Millhousen</a> - $50</li>
+            <li><a href="https://www.facebook.com/KnightsofStJohnMillhousen/">Ladies Auxilary of Millhousen</a> - $50</li>
+            <li><a href="https://scheidlerwearlymonuments.com/">Scheidler-Wearly Monuments</a> - $50</li>
         </ul>
     </div>
     <div class="stripe gray-stripe">
