--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
 
 
             <div class="item">
-                <div class="img-slide2">
+                <!--<div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
                         <a href="/about/history/" class="btn btn-default">
                             Our History
+                        </a>
+                    </div>
+                </div>-->
+                <div class="img-slide2">
+                    <div class="carousel-caption">
+                        <p>Don't get left out of the Parish Photo Directory! Contact Mollie to get scheduled.</p>
+                        <a href="/about/staff/" class="btn btn-default">
+                            View Contact Info
                         </a>
                     </div>
                 </div>
@@ -74,7 +82,7 @@
                     </div>
                 </div>
             </div> -->
-                <div class="item active">
+            <div class="item active">
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 10th!</p>
@@ -82,7 +90,7 @@
                             Learn More
                         </a>
                     </div>
-                </div> 
+                </div>
             </div>
         </div>
         <!-- Carousel controls -->
