Emphasize Photography Scheduling

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -35,6 +35,7 @@
                             <h2 class="media-heading">Mollie Johannigman</h2>
                             <div class="job">Administrator of Religious Education</div>
                             <div class="mail"><a href="mailto:mollie@millhousenchurch.com">mollie@millhousenchurch.com</a> </div>
+                            <div class="mail"><a href="tel:8126624512">812-662-4512</a></div>
                         </div>
                     </div>
                 </div>
