--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-            <div class="item">
+            <div class="item active">
                 <!--<div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
@@ -46,7 +46,7 @@
                 </div>-->
                 <div class="img-slide2">
                     <div class="carousel-caption">
-                        <p>Don't get left out of the Parish Photo Directory! Contact Mollie to get scheduled.</p>
+                        <p>Don't get left out of the Parish Photo Directory! Dates are Sept. 6th and 7th. Contact Mollie to get scheduled.</p>
                         <a href="/about/staff/" class="btn btn-default">
                             View Contact Info
                         </a>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div> -->
-            <div class="item active">
+            <div class="item">
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 10th!</p>
