Sale Bill, Raffle Prize List Update

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="stripe white-stripe">
         <h2>Sale Bill</h2>
-        <p>as of July 27, 2019</p>
+        <p>as of August 3, 2019</p>
         <object data="sale-bill-2019.pdf" type="application/pdf" width="100%" height="800">
             <p>This browser does not support PDFs. Please <a href="sale-bill-2019.pdf">download the PDF</a> to view it.</p>
         </object>
@@ -113,6 +113,11 @@
                 <td><a href="https://www.facebook.com/pages/Napolean-Meat-Locker/228490733959398">Napoleon Locker</a></td>
                 <td>1</td>
                 <td>$30 Certificate</td>
+            </tr>
+            <tr>
+                <td><a href="https://stonesfamilyrestaurant.com/">Stone's Family Restaurant</a></td>
+                <td>2</td>
+                <td>$25 Certificate</td>
             </tr>
             <tr>
                 <td><a href="http://www.mancinosgreensburg.com/index.html">Mancino's, Greensburg</a></td>
