Disable Auction Buttons

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
             </div> -->
-            <div class="item">
+            <!--<div class="item">
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>The parish auction will be on August 10th!</p>
@@ -91,7 +91,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
