Steeple Carousel Message

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
                 </div>-->
                 <div class="img-slide2">
                     <div class="carousel-caption">
-                        <p>Don't get left out of the Parish Photo Directory! Dates are Sept. 6th and 7th. Contact Mollie to get scheduled.</p>
-                        <a href="/about/staff/" class="btn btn-default">
-                            View Contact Info
-                        </a>
+                        <p>Help keep our historic church in tip top shape</p>
+                        <a href="https://onrealm.org/millhousenchurch/Give/QGXJOKOTNK" class="btn btn-default">Donate to the Steeple Project</a>
                     </div>
                 </div>
             </div>
