Melea Interim ARE

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -30,12 +30,12 @@
             <div class="col-md-6">
                 <div class="business-card">
                     <div class="media">
-                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Mollie Johannigman"> </div>
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/mm.png" alt="Melea Gault"> </div>
                         <div class="media-body">
-                            <h2 class="media-heading">Mollie Johannigman</h2>
-                            <div class="job">Administrator of Religious Education</div>
-                            <div class="mail"><a href="mailto:mollie@millhousenchurch.com">mollie@millhousenchurch.com</a> </div>
-                            <div class="mail"><a href="tel:8126624512">812-662-4512</a></div>
+                            <h2 class="media-heading">Melea Gault</h2>
+                            <div class="job">Interim Administrator of Religious Education</div>
+                            <div class="mail"><a href="mailto:melea@millhousenchurch.com">melea@millhousenchurch.com</a> </div>
+                            <!--<div class="mail"><a href="tel:8126624512">812-662-4512</a></div>-->
                         </div>
                     </div>
                 </div>
