--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <h4>Father Bill Turner</h4>
                 <h5>Sacramental Minister</h5>
             </div>
-            <div class="col-md-3"><img src="/img/mm.png" alt="Kathy Westrick" height="200" />
-                <h4>Mollie Johannigman</h4>
-                <h5>Administrator of Religious Education</h5>
+            <div class="col-md-3"><img src="/img/mm.png" alt="Melea Gault" height="200" />
+                <h4>Melea Gault</h4>
+                <h5>Interim Administrator of Religious Education</h5>
             </div>
             <div class="col-md-3"><img src="/img/fr-john-geis.png" alt="Father John Geis" height="200" />
                 <h4>Father John Geis</h4>
@@ -174,9 +174,6 @@
             </div>
             <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
                 <h3>Batesville Deanery</h3>
-                <a href="http://batesvilledeanery.com/" class="btn btn-inv">
-                    Visit Site
-                </a>
             </div>
         </div>
     </div>
