--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     {{.Include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
-        <p>Faith Formation classes and meetings have been suspended. Mass will continue as scheduled. <a href="https://www.archindy.org/worship/coronavirus2020-norms.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
+        <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
     </div>
     <script>
         var ts = Math.round((new Date()).getTime() / 1000);
