--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     {{.Include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
         <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
+        <p>Lots of Catholic Content can be found on <a href="https://www.ewtn.com/">EWTN</a>. A link to streaming masses is coming soon.</p>
+        <br>
+        <p>If you are quarantining or at-risk and in need, please see the <a href="https://millhousen.com">Millhousen Door Drop</a> site.</p>
     </div>
     <script>
         var ts = Math.round((new Date()).getTime() / 1000);
