Fix Hallow link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
         <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
         <p>Lots of Catholic Content can be found on <a href="https://www.ewtn.com/">EWTN</a>. Masses and more can be found on <a href="https://www.youtube.com/channel/UCep--CNHo77hFq9WTDT3f2g">All Saints' Youtube page</a>.</p>
-        <p>If you have extra time for prayer, consider downloading <a href="hallow.app/share/U2UGFQ">Hallow</a>.</p>
+        <p>If you have extra time for prayer, consider downloading <a href="http://hallow.app/share/U2UGFQ">Hallow</a>.</p>
     </div>
     <script>
         var ts = Math.round((new Date()).getTime() / 1000);
