--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     {{.Include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
+        <h2>Prayers</h2>
+        <p>Mark Wittkamper tested positive for the Coronavirus. He has continued to decline and will be taken off of the ventilator today.</p>
+        <p>Please adhere to all precautions. Social-distance, self-isolate if you have been in close contact, and get tested if you become ill.</p>
+        <p>Roman Johannigman, Sr. passed away on Wednesday evening at his home. Please join with the family and all parishioners in praying the rosary for him, on Friday evening at 8:30, from your homes.  Burial will be private.</p>
+        <br>
         <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
         <p>Lots of Catholic Content can be found on <a href="https://www.ewtn.com/">EWTN</a>. Masses and more can be found on <a href="https://www.youtube.com/channel/UCep--CNHo77hFq9WTDT3f2g">All Saints' Youtube page</a>.</p>
         <p>If you have extra time for prayer, consider downloading <a href="http://hallow.app/share/U2UGFQ">Hallow</a>.</p>
