Mark Wittkamper update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     {{.Include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
         <h2>Prayers</h2>
-        <p>Mark Wittkamper tested positive for the Coronavirus. He has continued to decline and will be taken off of the ventilator today.</p>
+        <p>Mark Wittkamper tested positive for the Coronavirus and has gone to his eternal rest. Let us lift our hearts in prayer for him & his family, especially his kids Brian & Sophia.</p>
         <p>Please adhere to all precautions. Social-distance, self-isolate if you have been in close contact, and get tested if you become ill.</p>
         <p>Roman Johannigman, Sr. passed away on Wednesday evening at his home. Please join with the family and all parishioners in praying the rosary for him, on Friday evening at 8:30, from your homes.  Burial will be private.</p>
         <br>
