--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -3,6 +3,43 @@
 
 <head>
   {{.Include "/templates/head.html"}}
+  <script>
+    //some default pre init
+    var PB = PB || {};
+    PB.q = PB.q || [];
+    PB.events = PB.events || [];
+
+    //PushBots ApplicationId (required)
+    PB.app_id = "5ec2c386ba89a426804ac193";
+    //Your domain name, must be HTTPS or localhost  (required)
+    PB.domain = "https://millhousenchurch.com";
+    //Update and uncomment it if you are using custom safari certificate for your app
+    PB.safari_push_id = "web.com.pushbots.safaripush";
+    //****************************************
+
+    PB.logging_enabled = true;
+    PB.auto_subscribe = true;
+
+    //Custom worker and manifest URL
+    //PB.worker_url = PB.domain + "/pushbots-worker.js";
+
+    //Welcome notification message
+    PB.welcome = {
+      title: "Welcome ",
+      message: "Thanks for subscribing!",
+      url: PB.domain
+    };
+
+    function sendNotification() {
+      PB.register();
+      PB.q.push(["sendNotification", {
+        title: "Hey ",
+        message: "Why not?",
+        url: "https://millhousenchurch.com"
+      }]);
+    }
+  </script>
+  <script src="//cdn.pushbots.com/js/sdk.min.js" type="text/javascript" onload="PB.init()" async></script>
   <title>Bulletins - Immaculate Conception Church</title>
   <meta name="description" content="View the current bulletin that contains the latest parish news.">
 </head>
@@ -11,7 +48,8 @@
   {{.Include "/templates/header.html"}}
   <div class="container bulletin-embed">
     <h1>Current Bulletin</h1>
-    <iframe width="100%" height="800" frameBorder="0" src="/js/pdfjs/web/viewer.html?file=/bulletins/files/2020/2020-05-17.pdf"></iframe>
+    <iframe width="100%" height="800" frameBorder="0"
+      src="/js/pdfjs/web/viewer.html?file=/bulletins/files/2020/2020-05-17.pdf"></iframe>
     <p>If you are in need of a paper copy of the bulletin, pick one up from the Bulletin Box in front of church.</p>
     <h3>Need an older bulletin?</h3>
     <p>If you are in need of a past bulletin, <a href="/bulletins/files/">browse our archives</a>.</p>
