--- a/index.html
+++ b/index.html
@@ -33,19 +33,17 @@
         </ol>
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
-
-
-
-
             <div class="item">
-                <!--<div class="img-slide2">
+                <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
                         <a href="/about/history/" class="btn btn-default">
                             Our History
                         </a>
                     </div>
-                </div>-->
+                </div>
+            </div>
+            <div class="item">
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>We can now process recurring gifts online!</p>
@@ -54,7 +52,6 @@
                 </div>
             </div>
             <div class="item">
-
                 <div class="img-slide3 active">
                     <div class="carousel-caption">
                         <p>We are back open, join us on Sunday at 8 AM!</p>
