--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </div>
                 </div>
             </div>
-            <div class="item">
-                <div class="img-slide3 active">
+            <div class="item active">
+                <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>We are back open, join us on Sunday at 8 AM!</p>
                         <a href="/about/directions/" class="btn btn-default">
