Upgrade to Caddy2 Templates

--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Contact Us - Immaculate Conception Church</title>
     <meta name="description" content="If you need to get in touch with us, please don't hesitate!">
 </head>
 
-<body> {{.Include "/templates/header.html"}}
+<body> {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>Contact Us</h1>
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
