--- a/about/contact/thanks/index.html
+++ b/about/contact/thanks/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Elementary Faith Formation - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <script type="text/javascript">
         var count = 5;
@@ -38,7 +38,7 @@
             </span>
         </div>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
