--- a/about/history/index.html
+++ b/about/history/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Parish History - Immaculate Conception Church</title>
     <meta name="description" content="Immaculate Conception Church has had a long and interesting history since it was founded in 1834.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
     <div class="container">
         <h1>Our History</h1>
         <iframe src="https://www.youtube.com/embed/93nVWT6mK0s?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen class="ncyc-promo"></iframe>
@@ -33,7 +33,7 @@
 	<h2>More Old Photos</h2>
         <p>Many old photos and documents can be found on <a href="https://millhousen.shutterfly.com/">this Shutterfly site</a>. There are also many photos hanging in <a href="https://stonesfamilyrestaurant.com/">Stone's Family Restaurant</a> and the parish office.</p>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 </body>
 
 </html>
