--- a/about/mass/index.html
+++ b/about/mass/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Mass - Immaculate Conception Church</title>
     <meta name="description" content="Join us for Mass in Millhousen every Sunday at 8 AM!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>Mass</h1>
@@ -17,7 +17,7 @@
         <p>If 8 AM is inconvenient, check the Mass times of our <a href="/#cohort">nearby cohort parishes</a>.</p>
     </div>
 
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
