--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Staff - Immaculate Conception Church</title>
     <meta name="description" content="We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>Staff</h1>
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
