--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Auction - Immaculate Conception Church</title>
     <meta name="description" content="The parish auction is approaching quickly and consignment reservations are being accepted now!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
 
 
@@ -231,7 +231,7 @@
         </a>
     </div>
 
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 
     <script type="application/ld+json">
