--- a/faith-formation/adult/index.html
+++ b/faith-formation/adult/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  {{.Include "/templates/head.html"}}
+  {{include "/templates/head.html"}}
     <title>Adult Education - Immaculate Conception Church</title>
 </head>
 
 <body>
-  {{.Include "/templates/header.html"}}
+  {{include "/templates/header.html"}}
         <div class="container">
             <h1>Upcoming Formation Events</h1>
             <hr/>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <hr/> </div>
-            {{.Include "/templates/footer.html"}}
+            {{include "/templates/footer.html"}}
 </body>
 
 </html>
