--- a/faith-formation/rcia/index.html
+++ b/faith-formation/rcia/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>RCIA - Immaculate Conception Church</title>
     <meta name="description" content="Interested in becoming Catholic? Check out our RCIA program!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>RCIA</h1>
         <p>RCIA stands for the Rite of Christian Initiation of Adults. If you or someone you know is interesting in learning more about the Catholic faith or may be interested in joining the Catholic Church, <a href="/about/contact/">contact the parish office</a>.</p>
     </div>
 
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
