--- a/sacraments/index.html
+++ b/sacraments/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>The 7 Sacraments - Immaculate Conception Church</title>
     <meta name="description" content="The seven sacraments, instituted by Jesus and entrusted to the church, are visible signs of God's grace.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
     <div class="stripe gray-stripe">
 
         <h1>The Seven Sacraments</h1>
@@ -47,7 +47,7 @@
         <h2>Matrimony</h2>
         <p>Preparation for the Sacrament of Marriage requires at least six months. <a href="/about/contact/">Call the parish office</a> before setting the date for your wedding.</p>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
