--- a/youth-ministry/index.html
+++ b/youth-ministry/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Youth Ministry - Immaculate Conception Church</title>
     <meta name="description" content="Our youth ministry program is small but strong and is becoming more active every year!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
 
 
@@ -49,7 +49,7 @@
         </ul>
     </div>
 
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
