--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Lay Leadership - Immaculate Conception Church</title>
     <meta name="description" content="We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
     <div class="container">
         <h1>Lay Leadership</h1>
         <p>Many passionate parishioners help the parish by taking leadership roles in councils and committees.</p>
@@ -38,7 +38,7 @@
         <p>Purpose, who we are, what we do</p> -->
 
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 </body>
 
 </html>
