--- a/about/mission-statement/index.html
+++ b/about/mission-statement/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Mission Statement - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
     <div class="stripe gray-stripe">
         <div class="container">
             <h1>Mission Statement</h1>
@@ -25,7 +25,7 @@
             <img src="/img/mission-statement.jpg" width="700" class="page-photo" alt="Framed Mission Statement">
         </div>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 </body>
 
 </html>
