--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  {{.Include "/templates/head.html"}}
+  {{include "/templates/head.html"}}
   <title>Bulletins - Immaculate Conception Church</title>
   <meta name="description" content="View the current bulletin that contains the latest parish news.">
 </head>
 
 <body>
-  {{.Include "/templates/header.html"}}
+  {{include "/templates/header.html"}}
   <div class="container bulletin-embed">
     <h1>Current Bulletin</h1>
     <iframe width="100%" height="800" frameBorder="0"
@@ -17,7 +17,7 @@
     <h3>Need an older bulletin?</h3>
     <p>If you are in need of a past bulletin, <a href="/bulletins/files/">browse our archives</a>.</p>
   </div>
-  {{.Include "/templates/footer.html"}}
+  {{include "/templates/footer.html"}}
 </body>
 
 </html>
