--- a/faith-formation/elementary/index.html
+++ b/faith-formation/elementary/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Elementary Faith Formation - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>Elementary Faith Formation</h1>
@@ -16,7 +16,7 @@
                 <p>This browser does not support PDFs. Please <a href="/faith-formation/elementary/elementary-ff-schedule.pdf">download the PDF</a> to view it.</p>
             </object>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
