--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Immaculate Conception Church | Millhousen, IN</title>
     <meta name="description" content="Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
         <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
         <p>Lots of Catholic Content can be found on <a href="https://www.ewtn.com/">EWTN</a>. Masses and more can be found on <a href="https://www.youtube.com/channel/UCep--CNHo77hFq9WTDT3f2g">All Saints' Youtube page</a>.</p>
@@ -296,7 +296,7 @@
           </div>
         </div>
       </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
     <script src="/js/format-google-calendar.js"></script>
     <script>
         formatGoogleCalendar.init({
