--- a/temp.html
+++ b/temp.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    {{.Include "/templates/head.html"}}
+    {{include "/templates/head.html"}}
     <title>Elementary Faith Formation - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    {{.Include "/templates/header.html"}}
+    {{include "/templates/header.html"}}
 
     <div class="container">
         <h1>Elementary Faith Formation</h1>
         <p>Classes are currently out for the summer and will resume this fall.</p>
     </div>
-    {{.Include "/templates/footer.html"}}
+    {{include "/templates/footer.html"}}
 
 </body>
 
