--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
     {{include "/templates/header.html"}}
     <div style=display:none class="stripe red-stripe" id=hours-anomaly>
-        <p>All public events have been cancelled. This includes Stations, Rosary, and Masses. <a href="https://archindy.org/archbishop/mass2020.html">Please see this notice from the Archdiocese reguarding the coronavirus</a>.</p>
-        <p>Lots of Catholic Content can be found on <a href="https://www.ewtn.com/">EWTN</a>. Masses and more can be found on <a href="https://www.youtube.com/channel/UCep--CNHo77hFq9WTDT3f2g">All Saints' Youtube page</a>.</p>
-        <p>If you have extra time for prayer, consider downloading <a href="http://hallow.app/share/U2UGFQ">Hallow</a>.</p>
+        <p>Father Santhosh is sick, so Mass for January 3rd has been cancelled.</p>
+	<p>Masses nearby can be found on <a href="https://masstimes.org/map?lat=39.21&lng=-85.43&SearchQueryTerm=Millhousen,%20Indiana">MassTimes.org</a>.<p>
     </div>
     <script>
         var ts = Math.round((new Date()).getTime() / 1000);
         anomaly = document.getElementById('hours-anomaly');
-        if (ts <= 1588046400) {
+        if (ts <= 1609686000) {
             anomaly.style.display = "block";
         } else {
             anomaly.style.display = "none";
