Add Father Santhosh

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <h4>Sister Donna Prickel</h4>
                 <h5>Parish Life Coordinator</h5>
             </div>
-            <div class="col-md-6"> <img src="/img/fr-bill-turner.png" alt="Father William Turner" height="200" />
-                <h4>Father Bill Turner</h4>
+            <div class="col-md-6"> <img src="/img/mm.png" alt="Avatar" height="200" />
+                <h4>Father Santhosh Yohannan</h4>
                 <h5>Sacramental Minister</h5>
             </div>
 
